# scryptor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  create_sln.bat
.github/workflows/: build.yml
ext/: _ext.cmake
src/: scryptor.cpp
